--- a/public/login.html
+++ b/public/login.html
@@ -1,35 +1,108 @@
-<!DOCTYPE html>
 <html>
-<head>
-
-    <meta name="viewport" content="minimum-scale=1.0, width=device-width, maximum-scale=1.0, user-scalable=no"/>
-    <meta charset="utf-8">
-
-    <title>Login</title>
-
-    <link rel="stylesheet" href="./css/style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
-
-</head>
-<body>
-<div class="container">
-    <h1>Welcome to three dimensional tic tac toe!</h1>
-  <!--  Dont sql inject me or xss me pls-->
-    <ul></ul>
-
-    <section>
-      <form method="post" action= 'adminHome'>
-        <div class="input-field">
-          <i class="material-icons prefix">account_circle</i>
-          <input placeholder="username" type="text" id="username" name="username" for = 'username'  required /> <br />
-          <i class="material-icons prefix">lock</i>
-          <input placeholder="password" type="password" id="password" name="password" required /> <br />
-        </div>
-          <input type="submit" class="waves-effect waves-light btn" value="Login">
-          <a href= "register.html" class="waves-effect waves-light btn"><i class="material-icons left">query_builder</i>Register Now! </a>
-      </form>
-    </section>
-</div>
-</body>
-</html>
+   <head>
+      <meta name="viewport" content="minimum-scale=1.0, width=device-width, maximum-scale=1.0, user-scalable=no"/>
+      <meta charset="utf-8">
+      <title>Login</title>
+   </head>
+   <body>
+      <div class="containers">
+         <h1>Welcome to three dimensional tic tac toe!</h1>
+      </div>
+      <!-- <ul></ul>
+         <section>
+           <form method="post" action= 'adminHome'>
+             <div class="input-field">
+               <i class="material-icons prefix">account_circle</i>
+               <input placeholder="username" type="text" id="username" name="username" for = 'username'  required /> <br />
+               <i class="material-icons prefix">lock</i>
+               <input placeholder="password" type="password" id="password" name="password" required /> <br />
+             </div>
+               <input type="submit" class="waves-effect waves-light btn" value="Login">
+               <a href= "register.html" class="waves-effect waves-light btn"><i class="material-icons left">query_builder</i>Register Now! </a>
+           </form>
+         </section>
+         </div>
+         </body>
+         </html> -->
+      <div class="container white z-depth-2">
+         <ul class="tabs teal">
+            <li class="tab col s3"><a class="white-text active" href="#login">login</a></li>
+            <li class="tab col s3"><a class="white-text" href="#register">register</a></li>
+         </ul>
+         <div id="login" class="col s12">
+            <form class="col s12">
+               <div class="form-container">
+                  <h3 class="teal-text">Hello</h3>
+                  <div class="row">
+                     <div class="input-field col s12">
+                        <input id="email" type="email" class="validate">
+                        <label for="email">Email</label>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="input-field col s12">
+                        <input id="password" type="password" class="validate">
+                        <label for="password">Password</label>
+                     </div>
+                  </div>
+                  <br>
+                  <center>
+                     <button class="btn waves-effect waves-light teal" type="submit" name="action">Connect</button>
+                     <br>
+                     <br>
+                     <a href="">Forgotten password?</a>
+                  </center>
+               </div>
+            </form>
+         </div>
+         <div id="register" class="col s6" style:"padding:0;">
+            <form class="col 6">
+               <div class="form-container">
+                  <h3 class="teal-text">Welcome</h3>
+                  <div class="row">
+                     <div class="input-field col s6">
+                        <input id="last_name" type="text" class="validate">
+                        <label for="last_name">First Name</label>
+                     </div>
+                     <div class="input-field col s6">
+                        <input id="last_name" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="input-field col s12">
+                        <input id="email" type="email" class="validate">
+                        <label for="email">Email</label>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="input-field col s12">
+                        <input id="email-confirm" type="email" class="validate">
+                        <label for="email-confirm">Email Confirmation</label>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="input-field col s12">
+                        <input id="password" type="password" class="validate">
+                        <label for="password">Password</label>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="input-field col s12">
+                        <input id="password-confirm" type="password" class="validate">
+                        <label for="password-confirm">Password Confirmation</label>
+                     </div>
+                  </div>
+                  <center>
+                     <button class="btn waves-effect waves-light teal" type="submit" name="action">Submit</button>
+                  </center>
+               </div>
+            </form>
+         </div>
+      </div>
+      <script> src = "./style.js/" </script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
+      <link rel="stylesheet" href="/style.css"/>
