--- a/public/login.html
+++ b/public/login.html
@@ -26,8 +26,10 @@
          </html> -->
       <div class="container white z-depth-2">
          <ul class="tabs teal">
-            <li class="tab col s3"><a class="white-text active" href="#login">login</a></li>
-            <li class="tab col s3"><a class="white-text" href="#register">register</a></li>
+           <div class="row">
+            <li class="tab col s6"><a class="white-text active" href="#login">login</a></li>
+            <li class="tab col s6"><a class="white-text" href="#register">register</a></li>
+          </div>
          </ul>
          <div id="login" class="col s12">
             <form class="col s12">
