--- a/public/login.html
+++ b/public/login.html
@@ -5,25 +5,6 @@
       <title>Login</title>
    </head>
    <body>
-      <div class="containers">
-         <h1>Welcome to three dimensional tic tac toe!</h1>
-      </div>
-      <!-- <ul></ul>
-         <section>
-           <form method="post" action= 'adminHome'>
-             <div class="input-field">
-               <i class="material-icons prefix">account_circle</i>
-               <input placeholder="username" type="text" id="username" name="username" for = 'username'  required /> <br />
-               <i class="material-icons prefix">lock</i>
-               <input placeholder="password" type="password" id="password" name="password" required /> <br />
-             </div>
-               <input type="submit" class="waves-effect waves-light btn" value="Login">
-               <a href= "register.html" class="waves-effect waves-light btn"><i class="material-icons left">query_builder</i>Register Now! </a>
-           </form>
-         </section>
-         </div>
-         </body>
-         </html> -->
       <div class="container white z-depth-2">
          <ul class="tabs teal">
            <div class="row">
@@ -34,7 +15,7 @@
          <div id="login" class="col s12">
             <form class="col s12">
                <div class="form-container">
-                  <h3 class="teal-text">Hello</h3>
+                  <h3 class="teal-text">Login</h3>
                   <div class="row">
                      <div class="input-field col s12">
                         <input id="email" type="email" class="validate">
