--- a/public/login.html
+++ b/public/login.html
@@ -44,23 +44,23 @@
                   <h3 class="teal-text">Welcome</h3>
                   <div class="row">
                      <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">First Name</label>
+                        <input id="first_name" name="first_name" type="text" class="validate">
+                        <label for="first_name">First Name</label>
                      </div>
                      <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
+                        <input id="last_name" name="last_name" type="text" class="validate">
                         <label for="last_name">Last Name</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
+                        <input id="email" name="email" type="email" class="validate">
                         <label for="email">Email</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="email-confirm" type="email" class="validate">
+                        <input id="gender"-confirm" type="email" class="validate">
                         <label for="email-confirm">Email Confirmation</label>
                      </div>
                   </div>
