gister? I just met her

--- a/public/registersuccess.html
+++ b/public/registersuccess.html
@@ -15,7 +15,7 @@
          <div id="login" class="col s12">
             <form class="col s12">
                <div class="form-container">
-                  <h3 class="teal-text">Login</h3>
+                  <h3 class="teal-text">Successfully Registered! Now, login...</h3>
                   <div class="row">
                      <div class="input-field col s12">
                         <input id="email" type="email" class="validate">
