--- a/public/login.html
+++ b/public/login.html
@@ -8,22 +8,6 @@
       <div class="containers">
          <h1>Welcome to three dimensional tic tac toe!</h1>
       </div>
-      <!-- <ul></ul>
-         <section>
-           <form method="post" action= 'adminHome'>
-             <div class="input-field">
-               <i class="material-icons prefix">account_circle</i>
-               <input placeholder="username" type="text" id="username" name="username" for = 'username'  required /> <br />
-               <i class="material-icons prefix">lock</i>
-               <input placeholder="password" type="password" id="password" name="password" required /> <br />
-             </div>
-               <input type="submit" class="waves-effect waves-light btn" value="Login">
-               <a href= "register.html" class="waves-effect waves-light btn"><i class="material-icons left">query_builder</i>Register Now! </a>
-           </form>
-         </section>
-         </div>
-         </body>
-         </html> -->
       <div class="container white z-depth-2">
          <ul class="tabs teal">
            <div class="row">
@@ -32,18 +16,18 @@
           </div>
          </ul>
          <div id="login" class="col s12">
-            <form class="col s12">
+            <form class="col s12" action="login" method="post">
                <div class="form-container">
-                  <h3 class="teal-text">Hello</h3>
+                  <h3 class="teal-text">Login</h3>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
+                        <input id="email" type="email" class="validate" name = "email">
                         <label for="email">Email</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
+                        <input id="password" type="password" class="validate" name="password">
                         <label for="password">Password</label>
                      </div>
                   </div>
@@ -57,46 +41,49 @@
                </div>
             </form>
          </div>
-         <div id="register" class="col s6" style:"padding:0;">
-            <form class="col 6" action:"http://localhost:3000/" method="post">
+         <div id="register" class="col s6" style:"padding:0;" >
+            <form class="col 6" action="register" method="post">
                <div class="form-container">
                   <h3 class="teal-text">Welcome</h3>
                   <div class="row">
                      <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">First Name</label>
+                        <input id="first_name" type="text" class="validate" name="first_name">
+                        <label for="first_name">First Name</label>
                      </div>
                      <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
+                        <input id="last_name" type="text" class="validate" name="last_name">
                         <label for="last_name">Last Name</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
+                        <input id="email" type="email" class="validate" name="email">
                         <label for="email">Email</label>
                      </div>
                   </div>
                   <div class="row">
-                     <div class="input-field col s12">
-                        <input id="email-confirm" type="email" class="validate">
-                        <label for="email-confirm">Email Confirmation</label>
+                     <div class="input-field col s6">
+                        <input id="email-confirm" type="text" class="validate" name="gender">
+                        <label for="email-confirm">Gender</label>
                      </div>
+                     <div class="input-field col s6">
+                        <input id="password-confirm" type="number" class="validate" name="age">
+                        <label for="password-confirm">Age</label>
+                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
+                        <input id="email" type="text" class="validate" name="username">
+                        <label for="username">Username</label>
+                     </div>
+                  </div>                  <div class="row">
+                     <div class="input-field col s12">
+                        <input id="password" type="password" class="validate" name="password">
                         <label for="password">Password</label>
                      </div>
                   </div>
-                  <div class="row">
-                     <div class="input-field col s12">
-                        <input id="password-confirm" type="password" class="validate">
-                        <label for="password-confirm">Password Confirmation</label>
-                     </div>
-                  </div>
                   <center>
-                     <button class="btn waves-effect waves-light teal" type="submit" name="action">Submit</button>
+                        <input type="submit" value="submit">
                   </center>
                </div>
             </form>
