--- a/gamepage.html
+++ b/gamepage.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset='UTF-8'>
   <meta name="robots" content="noindex">
+  <script src = '/socket.io/socket.io.js'></script>
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css'>
   <style class="cp-pen-styles">
     body {
@@ -182,19 +183,19 @@
 
   <table class="tg0">
     <tr>
-      <th class="tg-us36">  <span class='btn_3d'>
+      <th  class="tg-us36">  <span id='1'class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></th>
-      <th class="tg-us36">  <span class='btn_3d'>
+      <th  class="tg-us36">  <span id='2' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></th>
-      <th class="tg-akyt">  <span class='btn_3d'>
+      <th class="tg-akyt">  <span id='3' class='btn_3d'>
         <span>
           <span>
           </span>
@@ -202,19 +203,19 @@
         </span></th>
     </tr>
     <tr>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='4'class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='5'class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td  class="tg-us36">  <span id='6' class='btn_3d'>
         <span>
           <span>
           </span>
@@ -222,19 +223,19 @@
         </span></td>
     </tr>
     <tr>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='7' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td  class="tg-us36">  <span id='8' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td  class="tg-us36">  <span id='9' class='btn_3d'>
         <span>
           <span>
           </span>
@@ -245,19 +246,19 @@
 
   <table class="tg1">
     <tr>
-      <th class="tg-us36">  <span class='btn_3d'>
+      <th class="tg-us36">  <span id='10'class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></th>
-      <th class="tg-us36">  <span class='btn_3d'>
+      <th class="tg-us36">  <span id='11' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></th>
-      <th class="tg-akyt">  <span class='btn_3d'>
+      <th class="tg-akyt">  <span id='12' class='btn_3d'>
         <span>
           <span>
           </span>
@@ -265,19 +266,19 @@
         </span></th>
     </tr>
     <tr>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='13' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='14' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='15' class='btn_3d'>
         <span>
           <span>
           </span>
@@ -285,19 +286,19 @@
         </span></td>
     </tr>
     <tr>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='16' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='17' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='18' class='btn_3d'>
         <span>
           <span>
           </span>
@@ -308,19 +309,19 @@
 
   <table class="tg2">
     <tr>
-      <th class="tg-us36">  <span class='btn_3d'>
+      <th class="tg-us36">  <span id='19' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></th>
-      <th class="tg-us36">  <span class='btn_3d'>
+      <th class="tg-us36">  <span id='20' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></th>
-      <th class="tg-akyt">  <span class='btn_3d'>
+      <th class="tg-akyt">  <span id='21' class='btn_3d'>
         <span>
           <span>
           </span>
@@ -328,19 +329,19 @@
         </span></th>
     </tr>
     <tr>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='22'class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='23' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='24' class='btn_3d'>
         <span>
           <span>
           </span>
@@ -348,19 +349,19 @@
         </span></td>
     </tr>
     <tr>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='25' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='26' class='btn_3d'>
         <span>
           <span>
           </span>
         </span>
         </span></td>
-      <td class="tg-us36">  <span class='btn_3d'>
+      <td class="tg-us36">  <span id='27' class='btn_3d'>
         <span>
           <span>
           </span>
