--- a/gamepage.html
+++ b/gamepage.html
@@ -401,7 +401,11 @@
         </span></td>
     </tr>
   </table>
-
+  <center>
+  <form action='/' method='get'>
+    <button type='submit' name='finish'>Quit/Login To Start New Game</button>
+  </form>
+</center>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
   <script src='/gamepage.js'> </script>
 </body>
