--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,9 @@
    </head>
    <body>
       <div class="containers">
-         <h1>Welcome to three dimensional tic tac toe!</h1>
+        <center >
+         <h1>Three Dimensional Tic Tac Toe!</h1>
+       </center>
       </div>
       <div class="container white z-depth-2">
          <ul class="tabs teal">
@@ -83,7 +85,7 @@
                      </div>
                   </div>
                   <center>
-                        <input type="submit" value="submit">
+                        <button type="submit" value="submit"> </button>
                   </center>
                </div>
             </form>
