--- a/gamepage.html
+++ b/gamepage.html
@@ -5,6 +5,7 @@
   <meta charset='UTF-8'>
   <meta name="robots" content="noindex">
   <script src = '/socket.io/socket.io.js'></script>
+
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css'>
   <style class="cp-pen-styles">
     body {
@@ -401,11 +402,13 @@
         </span></td>
     </tr>
   </table>
+  <div class = 'container'>
   <center>
-  <form action='/' method='get'>
-    <button type='submit' name='finish'>Quit/Login To Start New Game</button>
+  <form  action='javascript:void(0)' >
+    <button type='submit' class = 'btn waves-effect waves-light teal' name='finish'>Quit/Login To Start New Game</button>
   </form>
 </center>
+</div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
   <script src='/gamepage.js'> </script>
 </body>
