--- a/public/login.html
+++ b/public/login.html
@@ -23,19 +23,19 @@
                   <h3 class="teal-text">Login</h3>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="email" type="email" class="validate" name = "email">
+                        <input id="email" type="email" class="validate" name = "email" required>
                         <label for="email">Email</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="password" type="password" class="validate" name="password">
+                        <input id="password" type="password" class="validate" name="password" required>
                         <label for="password">Password</label>
                      </div>
                   </div>
                   <br>
                   <center>
-                     <button class="btn waves-effect waves-light teal" type="submit" name="action">Connect</button>
+                     <button class="btn waves-effect waves-light teal" type="submit" name="action" >Connect</button>
                      <br>
                      <br>
                      <a href="">Forgotten password?</a>
@@ -49,33 +49,33 @@
                   <h3 class="teal-text">Welcome</h3>
                   <div class="row">
                      <div class="input-field col s6">
-                        <input id="first_name" type="text" class="validate" name="first_name">
+                        <input id="first_name" type="text" class="validate" name="first_name" required>
                         <label for="first_name">First Name</label>
                      </div>
                      <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate" name="last_name">
+                        <input id="last_name" type="text" class="validate" name="last_name" required>
                         <label for="last_name">Last Name</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="email" type="email" class="validate" name="email">
+                        <input id="email" type="email" class="validate" name="email" required>
                         <label for="email">Email</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s6">
-                        <input id="email-confirm" type="text" class="validate" name="gender">
+                        <input id="email-confirm" type="text" class="validate" name="gender" required>
                         <label for="email-confirm">Gender</label>
                      </div>
                      <div class="input-field col s6">
-                        <input id="password-confirm" type="number" class="validate" name="age">
+                        <input id="password-confirm" type="number" class="validate" name="age" required>
                         <label for="password-confirm">Age</label>
                       </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="email" type="text" class="validate" name="username">
+                        <input id="email" type="text" class="validate" name="username" required>
                         <label for="username">Username</label>
                      </div>
                   </div>                  <div class="row">
@@ -85,7 +85,7 @@
                      </div>
                   </div>
                   <center>
-                        <button type="submit" value="submit"> </button>
+                        <button class="btn waves-effect waves-light teal" type="submit" value="submit" > Register </button>
                   </center>
                </div>
             </form>
@@ -93,7 +93,7 @@
       </div>
       <script> src = "./style.js/" </script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
       <link rel="stylesheet" href="/style.css"/>
