--- a/lobby.html
+++ b/lobby.html
@@ -30,29 +30,35 @@
   <script>
     var the_table = document.getElementById("tablu");
     var arr = new Array;
-    var students = [{"_id":"5ac6b55cb070ed0c271d4b90","first_name":"bob","last_name":"gill","username":"bob","password":"$2a$10$YIpwbOvGAQ/kd5rfVx3WFeK21mfkiM8gZONjqxEsqVka7aB7uBOui","gender":"femail","age":"123","email":"balbir@bob.com"},{"_id":"5ac9e4c429ec0e0514a435cf","first_name":"parsa","last_name":"habibi","username":"parswag","password":"$2a$10$6iXsXMytoHdkIIbL3.wSK.f47gY3o6Hma15YY/7DDmSd2DYVB9X5C","gender":"M","age":"12","email":"phabibi@sfu.ca","wins":5,"losses":1},{"_id":"5acbf27f4542f515b4e0d486","first_name":"dallan","last_name":"bhatti","username":"dbhatti","password":"$2a$10$rg81HRUPybfxxdWDUDdL9eL.l/p/f3B8QzMNHhxW4Lhw.j8kxTJ9W","gender":"male","age":"22","email":"dallansfu@gmail.com","wins":8,"losses":6,"time":0,"moves":0},{"_id":"5acbf30c4542f515b4e0d487","first_name":"kendrick","last_name":"duckworth","username":"kungfukenny","password":"$2a$10$9WAVOtMImGbQuTVukJ.fp.bkghbIA9n8Sv/bKHoY2qqgj89H3tYgK","gender":"male","age":"30","email":"kdot@gmail.com","wins":10,"losses":2,"time":0,"moves":0},{"_id":"5acbfc973a198b45f2ecafd0","moves":5,"time":1523317882379,"winner":"kungfukenny","losses":3},{"_id":"5acc39ff77e1a1630e1d2636","moves":8,"time":1523333619382,"winner":"parswag"},{"_id":"5acc3a2977e1a1630e1d2637","moves":15,"time":1523333667329,"winner":"dbhatti"},{"_id":"5acc3a3977e1a1630e1d2638","moves":22,"time":1523333684672,"winner":"dbhatti"},{"_id":"5acc3ab377e1a1630e1d2639","moves":36,"time":1523333808021,"winner":"parswag"},{"_id":"5acc3abc77e1a1630e1d263a","moves":47,"time":-3215,"winner":"parswag"},{"_id":"5acc3ac977e1a1630e1d263b","moves":54,"time":1523333825666,"winner":"parswag"},{"_id":"5acc3d94352c545b898bdbf7","moves":7,"time":1523334450852,"winner":"kungfukenny"},{"_id":"5acc4434b3474d60504769d0","moves":5,"time":1523336228637,"winner":"dbhatti"},{"_id":"5acc45a9d288ba60a767ebab","moves":5,"time":1523336603620,"winner":"kungfukenny"},{"_id":"5acc468c5f9f186123aa3f98","moves":5,"time":1523336833966,"winner":"kungfukenny"},{"_id":"5acc4767df4d31614cfefbe0","moves":5,"time":1523337051483,"winner":"kungfukenny"},{"_id":"5acc485ecb9fe5621811ce14","moves":5,"time":1523337298475,"winner":"kungfukenny"},{"_id":"5acc48c614e2ef623868642b","moves":5,"time":1523337402720,"winner":"kungfukenny"},{"_id":"5acc491314e2ef623868642c","moves":10,"time":1523337482286,"winner":"kungfukenny"},{"_id":"5acc4f2019563c637966af6b","moves":4,"time":1523339019013,"winner":"dbhatti"},{"_id":"5acc4f8a19563c637966af6c","moves":8,"time":1523339129304,"winner":"dbhatti"},{"_id":"5acc51300c26ce63d49cb88a","moves":3,"time":1523339559234,"winner":"dbhatti"},{"_id":"5acc520b27cf42643f780a8b","moves":2,"time":1523339777904,"winner":"dbhatti"}];
+    var students = [{"_id":"5ac9e4c429ec0e0514a435cf","first_name":"parsa","last_name":"habibi","username":"parswag","password":"$2a$10$6iXsXMytoHdkIIbL3.wSK.f47gY3o6Hma15YY/7DDmSd2DYVB9X5C","gender":"M","age":"12","email":"phabibi@sfu.ca","wins":5,"losses":1},{"_id":"5acbf27f4542f515b4e0d486","first_name":"dallan","last_name":"bhatti","username":"dbhatti","password":"$2a$10$rg81HRUPybfxxdWDUDdL9eL.l/p/f3B8QzMNHhxW4Lhw.j8kxTJ9W","gender":"male","age":"22","email":"dallansfu@gmail.com","wins":11,"losses":12,"time":0,"moves":0},{"_id":"5acbf30c4542f515b4e0d487","first_name":"kendrick","last_name":"duckworth","username":"kungfukenny","password":"$2a$10$9WAVOtMImGbQuTVukJ.fp.bkghbIA9n8Sv/bKHoY2qqgj89H3tYgK","gender":"male","age":"30","email":"kdot@gmail.com","wins":13,"losses":5,"time":0,"moves":0},{"_id":"5acbfc973a198b45f2ecafd0","moves":5,"time":1523317882379,"winner":"kungfukenny","losses":3},{"_id":"5acc39ff77e1a1630e1d2636","moves":8,"time":1523333619382,"winner":"parswag"},{"_id":"5acc3a2977e1a1630e1d2637","moves":15,"time":1523333667329,"winner":"dbhatti"},{"_id":"5acc3a3977e1a1630e1d2638","moves":22,"time":1523333684672,"winner":"dbhatti"},{"_id":"5acc3ab377e1a1630e1d2639","moves":36,"time":1523333808021,"winner":"parswag"},{"_id":"5acc3abc77e1a1630e1d263a","moves":47,"time":-3215,"winner":"parswag"},{"_id":"5acc3ac977e1a1630e1d263b","moves":54,"time":1523333825666,"winner":"parswag"},{"_id":"5acc3d94352c545b898bdbf7","moves":7,"time":1523334450852,"winner":"kungfukenny"},{"_id":"5acc4434b3474d60504769d0","moves":5,"time":1523336228637,"winner":"dbhatti"},{"_id":"5acc45a9d288ba60a767ebab","moves":5,"time":1523336603620,"winner":"kungfukenny"},{"_id":"5acc468c5f9f186123aa3f98","moves":5,"time":1523336833966,"winner":"kungfukenny"},{"_id":"5acc4767df4d31614cfefbe0","moves":5,"time":1523337051483,"winner":"kungfukenny"},{"_id":"5acc485ecb9fe5621811ce14","moves":5,"time":1523337298475,"winner":"kungfukenny"},{"_id":"5acc48c614e2ef623868642b","moves":5,"time":1523337402720,"winner":"kungfukenny"},{"_id":"5acc491314e2ef623868642c","moves":10,"time":1523337482286,"winner":"kungfukenny"},{"_id":"5acc4f2019563c637966af6b","moves":4,"time":1523339019013,"winner":"dbhatti"},{"_id":"5acc4f8a19563c637966af6c","moves":8,"time":1523339129304,"winner":"dbhatti"},{"_id":"5acc51300c26ce63d49cb88a","moves":3,"time":1523339559234,"winner":"dbhatti"},{"_id":"5acc520b27cf42643f780a8b","moves":2,"time":1523339777904,"winner":"dbhatti"},{"_id":"5acc535a96f2ba64af488618","moves":3,"time":5755,"winner":"kungfukenny"},{"_id":"5acd05d4b32fa52966e2a268","moves":1,"time":12468,"winner":"dbhatti"},{"_id":"5acd07a55356f22e958d273b","moves":1,"time":1331,"winner":"dbhatti"},{"_id":"5acd08c68758ae2fec6440d0","moves":1,"time":818,"winner":"dbhatti"},{"_id":"5acd08f48758ae2fec6440d1","moves":2,"time":1137,"winner":"dbhatti"},{"_id":"5acd0a8d8758ae2fec6440d2","moves":5,"time":12747,"winner":"kungfukenny"},{"_id":"5acd12d7c623cc6188c2ca91","moves":1,"time":1255,"winner":"dbhatti"},{"_id":"5acd13390b945e62429dc8e1","moves":1,"time":4586,"winner":"dbhatti"},{"_id":"5acd140d0abc4c637f3fb92d","moves":3,"time":8768,"winner":"dbhatti"},{"_id":"5acd148c0310a0642fb12e13","moves":2,"time":4494,"winner":"dbhatti"},{"_id":"5acd189eccf9f267cc3b5552","moves":1,"time":8071,"winner":"kungfukenny"},{"_id":"5acd18f8ccf9f267cc3b5553","first_name":"Sina","last_name":"Khalili","username":"Sinnerthebitfatpinner","password":"$2a$10$l2Gx4vXHstIDUy7Z7ekmcOV9/bx7X2Sl1T5glCq7Td9g9HktiCDHm","gender":"Female","age":"24","email":"khalili@sfu.ca","wins":0,"losses":0},{"_id":"5acd1927ccf9f267cc3b5554","moves":2,"time":1454,"winner":"dbhatti"},{"_id":"5acd227de124cd25fcc5e30e","first_name":"Parth","last_name":"Vakil","username":"Parthsss","password":"$2a$10$Dbl5aAjXtwY4dQmZT4xPT.CKrOJJ3Ig6RtHfx.em5KBQOSMpT4vFO","gender":"Female","age":"12","email":"vakil@sfu.ca","wins":0,"losses":1},{"_id":"5acd22b3e124cd25fcc5e30f","moves":1,"time":1433,"winner":"Parthsss"}];
+    var swag = 0;
     for(var i = 0 ; i < students.length; i++)
-          {
-            arr[i] = the_table.insertRow(i);
-            arr[i].insertCell(0);
-            arr[i].insertCell(1);
-            arr[i].insertCell(2);
-            arr[i].insertCell(3);
+        {
 
+            if(students[i].first_name )
+            {
+              arr[swag] = the_table.insertRow(swag);
+              arr[swag].insertCell(0);
+              arr[swag].insertCell(1);
+              arr[swag].insertCell(2);
+              arr[swag].insertCell(3);
+              swag++;
+            }
 
-          }
+        }
+        console.log(students.length);
+        swag = 0;
           for(var i =0; i < students.length; i++)
           {
-            for(var j = 0; j < students.length; j++)
-            {
-                if(students[i].first_name || students[i].username ||students[i].wins ||  students[i].losses){
-                  the_table.rows[i].cells[0].innerHTML = students[i].first_name
-                  the_table.rows[i].cells[1].innerHTML = students[i].username
-                  the_table.rows[i].cells[2].innerHTML = students[i].wins
-                  the_table.rows[i].cells[3].innerHTML = students[i].losses
-                }
 
-            }
+              if(students[i].first_name != undefined)
+                  {
+                  the_table.rows[swag].cells[0].innerHTML = students[i].first_name
+                  the_table.rows[swag].cells[1].innerHTML = students[i].username
+                  the_table.rows[swag].cells[2].innerHTML = students[i].wins
+                  the_table.rows[swag].cells[3].innerHTML = students[i].losses
+                  swag++;
+                  }
           }
 
 
