--- a/public/registersuccess.html
+++ b/public/registersuccess.html
@@ -22,13 +22,13 @@
                   <h3 class="teal-text">Account created now login</h3>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="email" type="email" class="validate" name='email'>
+                        <input id="email" type="email" class="validate" name='email' required>
                         <label for="email">Email</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="password" type="password" class="validate" name = 'password'>
+                        <input id="password" type="password" class="validate" name = 'password' required>
                         <label for="password">Password</label>
                      </div>
                   </div>
@@ -48,41 +48,41 @@
                   <h3 class="teal-text">Welcome</h3>
                   <div class="row">
                      <div class="input-field col s6">
-                        <input id="first_name" type="text" class="validate" name="first_name">
+                        <input id="first_name" type="text" class="validate" name="first_name" required>
                         <label for="first_name">First Name</label>
                      </div>
                      <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate" name="last_name">
+                        <input id="last_name" type="text" class="validate" name="last_name" required>
                         <label for="last_name">Last Name</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="email" type="email" class="validate" name="email">
+                        <input id="email" type="email" class="validate" name="email" required>
                         <label for="email">Email</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s6">
-                        <input id="email-confirm" type="text" class="validate" name="gender">
+                        <input id="email-confirm" type="text" class="validate" name="gender" required>
                         <label for="email-confirm">Gender</label>
                      </div>
                   </div>
                   <div class="row">
                     <div class="input-field col s6">
-                      <input id="password-confirm" type="number" class="validate" name="age">
+                      <input id="password-confirm" type="number" class="validate" name="age" required>
                       <label for="password-confirm">Age</label>
                     </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="username" type="text" class="validate" name="username">
+                        <input id="username" type="text" class="validate" name="username" required>
                         <label for="username">Username</label>
                      </div>
                   </div>
                   <div class="row">
                      <div class="input-field col s12">
-                        <input id="password" type="password" class="validate" name="password">
+                        <input id="password" type="password" class="validate" name="password" required>
                         <label for="password">Password</label>
                      </div>
                   </div>
